# agent

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  config.yml
.github/workflows/: build.yml  release.yml
agent/: Cargo.toml
agent/src/: client.rs  command.rs  lib.rs  logger.rs  main.rs  service.rs  shell.rs  socket.rs
agent_api/: CHANGELOG.md  Cargo.toml
agent_api/src/: lib.rs
src/: client.rs  lib.rs  main.rs  shell.rs  socket.rs
