[package]
name = "agent"
version = "0.9.0"
edition = "2024"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

[dependencies]
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
derivative = "2.2"
sysinfo = "0.33"
byte-unit = "5.1"
machine-uid = "0.5"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"
crc32fast = "1.4"
self-replace = "1.5"
miniz_oxide = "0.8"
portable-pty = "0.9"
thiserror = "2.0"
aes-gcm = "0.10"
subprocess = "0.2"
path-clean = "1.0"
ecies = { version = "0.2", default-features = false, features = [
    "std",
    "pure",
] }
abi_stable = "0.11"

actix-cloud = { version = "0.4", default-features = false }
skynet_api_monitor = "0.8"
skynet_api_agent = { version = "0.8", path = "../agent_api" }
skynet_api = { version = "0.6", features = ["plugin-api"] }

[lib]
crate-type = ["cdylib"]
